--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,9 @@
 
 body {
   height: 100%;
-  justify-content: center;
-  align-items: center;
   font-family: Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
   background-color: #f0f0f0;
   color: #333;
   font-size: 16px;
